--- a/style.css
+++ b/style.css
@@ -108,26 +108,7 @@ span {
    box-shadow: 0 0 1rem var(--main-color);
 }
 
-.btn {
-   display: inline-block;
-   text-align: center;
-   padding: 0.8rem 2.8rem;
-   background: var(--main-color);
-   border-radius: 3rem;
-   box-shadow: 0 0 1rem var(--borda-cabecalho-mobile);
-   font-size: 16px;
-   color: var(--second-bg-color);
-   letter-spacing: .1rem;
-   font-weight: 600;
-   transition: .2s ease;
-}
 
-.btn:hover {
-   box-shadow: none;
-   background: var(--main-color);
-   color: var(--second-bg-color);
-
-}
 /*------Sobre-----*/
 
 .sobre{
@@ -309,7 +290,6 @@ section .project{
    display: flex;
    width: 100%;
    height: 80%;
-   background: blue; 
 
 }
 .project-inicial{
@@ -325,7 +305,7 @@ section .project{
 
 
 .project-box{
-   border: 1px solid rgba(0,0,0,0.5);
+   border: 2.5px solid rgba(0,0,0,0.5);
    width: 40%;
    height: 300px;
    order: 2;
@@ -347,6 +327,7 @@ section .project{
 }
 
 .project-subtitle h2{
+   width: 300px;
    font-size: 28px;
    color: var(--main-color);
    margin-top: 20px;
@@ -355,7 +336,7 @@ section .project{
 .project-subtitle p{
    font-size: 18px;
    line-height: 32px;
-   text-align: justify;
+   text-align: left;
    margin-top: 10px;
 }
 .project-subtitle span{
@@ -448,9 +429,104 @@ section .project{
  
 }
 
+/*-----Formulário----*/
 
 
+section.form-contato{
+   display: flex;
+  width: 100%;
+  background: var(--azul-claro);
+  margin-top: 50px;
 
+}
+.contato-title{
+   display: flex;
+   justify-content: center;
+   padding: 1%;
+   margin-top: 30px;
+   margin-bottom: 10px;
+}
+
+.box-contato {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   width: 100%;
+   height: 300px;   
+   gap: 20px;
+   margin-left: 150px;
+}
+
+.form-content{
+   display: flex;  
+   justify-content: space-around;
+   width: 80%;
+   gap: 10px;
+}
+.form-input{
+   display: flex;
+   flex-direction: column;
+  
+}
+
+.box-social{
+   display: flex;
+   flex-direction: column;
+   width: 35%;
+}
+.box-social h1{
+    font-size: 22px;
+}
+
+.box-social p{
+   font-size: 18px;
+   line-height: 32px;
+   margin-left: 5px
+}
+
+.social-media{
+   display: flex;
+   width:166px;
+   margin-top: 10px;
+   margin-left: -5px;
+ 
+}
+.social-media a {
+   padding: 5px;
+   height: 28px; 
+   }
+
+
+.form-input input {
+   width:300px;
+   height: 30px;
+   gap: 25px;
+   margin-bottom: 5px;
+   border: none;
+  
+}
+
+textarea{
+   width:300px;
+   height: 100px;
+   gap: 25px;
+   margin-bottom: 5px;
+   border: none; 
+}
+
+footer{
+   display: flex;
+   width: 100%;
+   justify-content: center;
+
+}
+
+.footer-copy p{
+   display: flex;
+   width: 100%;
+   justify-content: center;
+   gap:5px;
+}
 
 
 
